--- a/Netflix-series/src/components/hooks/EV.css
+++ b/Netflix-series/src/components/hooks/EV.css
@@ -1,9 +1,21 @@
 .main-div{
     border-radius: 1rem;
-    color: blue;
+    color: black;
     align-items: center;
     justify-content: center;
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 
+}
+.btn-name{
+    border-radius: 1rem;
+    border-color: black;
+    background-color: violet;
+    width: 100px;
+    height: 50px;
+    font-size: large;;
 }
 .g-div{
     border-color: black;
