--- a/Todomainapp/src/projects/Todo/Todo.css
+++ b/Todomainapp/src/projects/Todo/Todo.css
@@ -67,15 +67,18 @@ h1{
 section h1 {
   margin: 0px 20rem;
   color: #fff;
-  font-size: 4.8rem;
+  font-size: 5.8rem;
   text-align: center;
 }
 
  .date-time {
-  font-size: 2.4rem;
+  font-size: 2.8rem;
   text-align: center;
   margin-bottom: 40px;
-  
+  padding-right: 12px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
   font-weight: bold;
 
   
@@ -93,7 +96,7 @@ form {
 }
 
 form input {
-  margin: 0px 20rem;
+  margin: 0px 9rem;
   padding: 10px;
   font-size: 1.8rem;
   letter-spacing: 0.1rem;
@@ -102,7 +105,7 @@ form input {
   /* border-radius: 15; */
   border-top-left-radius: 17px;
   border-bottom-left-radius: 17px;
-  max-width: 450px;
+  max-width: 400px;
   transition: background-color 200ms ease-in-out;
   width: 125%;
   background-color: #f2f3f4;
@@ -134,7 +137,7 @@ form button:hover {
 }
 
 form button {
-  margin-left: -8px ;
+  margin: 12px ;
   padding: 10.8px;
   font-size: 17px;
   border-top-right-radius: 15px;
@@ -152,18 +155,18 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1100px;
+  max-width: 1000px;
 }
 
 .todo-list {
-  min-width: 25%;
+  min-width: 20%;
 
   /* To remove the bullets of unordered list */
   list-style: none;
 }
 
 .todo-item {
-  margin: 2.4rem 2.4rem 3.4rem 17rem;
+  margin: 2.4rem 0rem 3.4rem 5rem;
   /*word-wrap: break-word;
     */ /*flex-wrap: wrap;
     */
@@ -172,8 +175,8 @@ span {
   border-radius: 30px;
   transition: background-color 200ms ease-in-out;
   background-color: #f2f3f4;
-  min-width: 45rem;
-  max-width: 50rem;
+  min-width: 37rem;
+  max-width: 40rem;
   padding: 1.2rem 4rem 1.2rem 2.5rem;
   display: grid;
   grid-template-columns: 1fr 0.3fr 0.3fr;
@@ -195,9 +198,9 @@ li span {
   cursor: pointer;
   width: 10px;
   height: 4rem;
-  border-radius: 80%;
-  margin: 1px 8px 2px 2px;
-  padding-left: 1px;
+  border-radius: 70%;
+  margin: 1px 5px 1px 1px;
+  padding-left: 5px;
   padding-bottom: 10px;
   padding-top: 10px;
   background-color: #fff;
@@ -227,7 +230,7 @@ li span {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: 12px 12px 12px 10.5rem;
   background-color: #e74c3c;
   font-size: 1.6rem;
   padding: 1rem 2.2rem;
