--- a/Pokemon-Project/src/index.css
+++ b/Pokemon-Project/src/index.css
@@ -103,7 +103,7 @@ input[type="text"] {
 }
 
 .pokemon-card {
-  width: 36rem;
+  width: 30rem;
   min-height: 42rem;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
@@ -170,6 +170,7 @@ figure {
   color: #000;
   text-transform: capitalize;
   margin-top: 2.4rem;
+  background-color: #2ecc71;
 }
 
 .pokemon-highlight {
